# consistency_models

./: .gitignore  pyproject.toml
cm/: train_util.py
datasets/: 1d.py  mnist.py
scripts/: cm_train.py  train_1d.sh  train_mnist.sh
